# MyVoxelGame

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  LauncherInfo.plist  dump_pcf.py  info.plist  portals_dump.txt  v_portalgun.glb
.sentry-native/1d5bcd6a-f373-4e2e-a465-bea1846ea632.run/: session.json
.sentry-native/782d1dfb-7735-454d-6b3e-a74e95075776.run/: session.json
.sentry-native/attachments/63683c57-0699-47e2-81e3-ea0e55e2611f/: __sentry-event
.sentry-native/attachments/6f414ffb-99bc-4314-8335-5fe61b4e167f/: __sentry-event
.sentry-native/completed/: 5d052c89-45e2-489f-aa80-7ddfb0aa8b2c.dmp  63683c57-0699-47e2-81e3-ea0e55e2611f.dmp  6f414ffb-99bc-4314-8335-5fe61b4e167f.dmp  74c815df-4946-4422-93e5-7ab3fd147fa5.dmp  f9509613-ce47-4777-9d44-85a1270e74b2.dmp
assets/items/: 0.json  acacia_shelf.json  bamboo_shelf.json  birch_shelf.json  cherry_shelf.json  copper_chain.json  crimson_shelf.json  dark_oak_shelf.json  iron_chain.json  jungle_shelf.json  mangrove_shelf.json  oak_shelf.json  pale_oak_shelf.json  spruce_shelf.json  warped_shelf.json  waxed_exposed_copper_chain.json  waxed_weathered_copper_chain.json
assets/launcher/: AppIcon.icns
assets/models/block/: acacia_shelf.json  bamboo_shelf.json  birch_shelf.json  cherry_shelf.json  crimson_shelf.json  dark_oak_shelf.json  jungle_shelf.json  mangrove_shelf.json  oak_shelf.json  pale_oak_shelf.json  spruce_shelf.json  warped_shelf.json
assets/models/item/: compass.json  copper_chain.json  exposed_copper_chain.json  iron_chain.json  oxidized_copper_chain.json  weathered_copper_chain.json
assets/models/viewmodel/: v_portalgun.glb  v_portalgun_animated.glb
docs/: 00-context.md  0001-use-boost-asio.md  0002-typed-packets-and-listeners.md  0003-separate-io-threads.md  0004-packet-pipeline-flips-on-io-thread.md  10-containers.md  20-components.md  ADR-001_JobSystem.md  ARCHITECTURE.md  README.md  add-a-packet.md  add-a-render-layer.md  add-a-thread.md  add_block.md  budgets.md  chunk-lifecycle.md  chunk-watching.md  client-chunk-manager.md  logging-and-metrics.md  meshing-pipeline.md  packet-framing.md  packet-registry.md  player-session.md  portal-differences-from-source.md  protocol-flows.md  queues.md  terrain-library-patches.md  thread-model.md  tick-loop.md
ext/OpenAL/: CMakeLists.txt
ext/OpenAL/common/: ghc_filesystem.h
ext/OpenAL/examples/: aldebug.cpp  altonegen.c
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/glfw/docs/: extra.scss
ext/glfw/examples/: splitview.c
ext/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
ext/stb_image/: CMakeLists.txt  stb_image.h
ext/zlib/: CMakeLists.txt  configure  deflate.c  inflate.c  trees.c  zlib.h
ext/zlib/.github/workflows/: c-std.yml  cmake.yml  configure.yml  msys-cygwin.yml
ext/zlib/contrib/blast/: blast.c
ext/zlib/contrib/iostream/: test.cpp
ext/zlib/contrib/minizip/: skipset.h  unzip.c
ext/zlib/contrib/puff/: Makefile  puff.c  pufftest.c
ext/zlib/examples/: gun.c
ext/zlib/test/: infcover.c
shaders/: block.frag  block.vert  block_opaque.frag  block_opaque_vk.frag  block_opaque_vk.frag.spv  block_solid.frag  block_solid_vk.frag  block_solid_vk.frag.spv  block_vk.frag  block_vk.frag.spv  block_vk.vert  block_vk.vert.spv  crosshair_vk.frag  crosshair_vk.frag.spv  crosshair_vk.vert  crosshair_vk.vert.spv  enhanced_block.frag  enhanced_block.vert  gui_color_vk.frag  gui_color_vk.frag.spv  gui_color_vk.vert  gui_color_vk.vert.spv  gui_textured_vk.frag  gui_textured_vk.frag.spv  gui_textured_vk.vert  gui_textured_vk.vert.spv  highlight_vk.frag  highlight_vk.frag.spv  highlight_vk.vert  highlight_vk.vert.spv  player_billboard_vk.frag  player_billboard_vk.frag.spv  player_billboard_vk.vert  player_billboard_vk.vert.spv  portal.frag  portal.vert  portal_bloom_blur.frag  portal_bloom_bright.frag  portal_bloom_upsample.frag  portal_crosshair.frag  (+24 more)
src/: main.cpp  pch.hpp
src/core/: Config.hpp  JobSystem.cpp  JobSystem.hpp  Log.cpp  Log.hpp
src/debug/: DebugSystem.cpp  DebugSystem.hpp
src/game/: BlockModel.cpp  BlockModel.hpp  BlockRegistry.cpp  BlockRegistry.hpp  Blocks.hpp  Chunk.hpp  ChunkProvider.cpp  ChunkProvider.hpp  ChunkSection.hpp  EnhancedBlockRegistry.cpp  EnhancedBlockRegistry.hpp  EnhancedMesher.cpp  EnhancedMesher.hpp  Inventory.cpp  Inventory.hpp  Mesher.cpp  Mesher.hpp  ModelBasedMesher.cpp  ModelBasedMesher.hpp  Physics.cpp  Physics.hpp  PlayerController.cpp  PlayerController.hpp  RayCast.cpp  RayCast.hpp  WorldAccess.cpp  WorldAccess.hpp  WorldCoordinates.cpp  WorldCoordinates.hpp  WorldManager.cpp  WorldManager.hpp  WorldMath.hpp
src/launcher/: LauncherApp.cpp  LauncherApp.hpp  LauncherConfig.hpp  launcher.rc  main.cpp
src/platform/: GameDirectory.cpp  GameDirectory.hpp  Input.cpp  Input.hpp  PlatformMain.cpp  PlatformMain.hpp  Time.cpp  Time.hpp
src/render/: AtlasBuilder.cpp  AtlasBuilder.hpp  BlockHighlight.cpp  BlockHighlight.hpp  Camera.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  Crosshair.cpp  Crosshair.hpp  Frustum.hpp  QuadRenderer.cpp  QuadRenderer.hpp  Shader.cpp  Shader.hpp  TextureAnimator.cpp  TextureAnimator.hpp  TextureAtlas.cpp  TextureAtlas.hpp  Vertex.hpp
src/server/: IntegratedServer.cpp  IntegratedServer.hpp
src/test/: TestSystem.cpp  TestSystem.hpp
src/tests/: test_region_dumper.cpp
src/tools/: RegionDumper.cpp  RegionDumper.hpp  RegionDumperMain.cpp
src/world/: NBTParser.cpp  NBTParser.hpp  RegionDumper.cpp  RegionDumper.hpp  RegionFile.cpp  RegionFile.hpp  RegionFileCache.cpp  RegionFileCache.hpp
temp/: CppChunkGeneratorTest.cpp  all_blocks.txt
tools/: auto_release.ps1  auto_release.sh  bump_version.ps1  bump_version.sh  create_dmg.sh  create_installer.iss  create_installer.ps1  create_release.sh  dmg_ds_store  fix_vulkan_rpath.sh  gen_items.py  generate_dmg_ds_store.py  release_game.sh  release_launcher.sh  update_plist_version.sh
tools/protocol-gen/: generate_block_states.js  package-lock.json  package.json
(+893 files in other folders)
